# aice

./: .env.test  .gitignore  README.md  pyproject.toml
data/my_console/: manager.prompt.txt
data/pushkin/: DP.md  STD.md  tasks.md
data/stalin/: HRD.md  tasks.md
src/: __main__.py  __main__stalin.py  paths.py  serv.py
src/agents/: Architect.py  BaseAgent.py  Manager.py  analyst.py  architect.py  baseagent.py  manager.py  message_history.py  system_prompt.py
src/agents/prompts/: PRD.example.json  PRD.py  PRD.schema.md  PRD_schema.py  analyst.prompt.md  command-language.md  commands.example01.json  commands.example01.md  commands.json  (+4 more)
src/aice/: aice_server.py  aice_service.py  aice_service2.py
src/llm/: LlmGate.py  exa.txt  howto.md  llm_gate.py  llmgate.py  message_history.py
src/pdf/: pdf_monster.py  pdf_reader.py
src/prompts/: command0.1.txt  command0.11.txt  command0.12.txt  command_examples.txt  fieldsets.txt
src/pushkin/: Pushkin.py  chatweb.py  pushkin_chatweb.py  pushkin_chatweb1.py
src/stalin/: Stalin.py  stalin_chatweb.py
src/tests/: comnands.json  entities.json  test_02.py  yyy.py
src/utils/: FileUtils.py  dates.py  file_io.py  md.py  strings.py  sugar.py
tests/: conditions.json  conftest.py  test_01.py
tests/agents/: test_agents_01.py  test_cmd_01.py  test_propmt_loading.py
tests/experiments/: test_01.py  xxx.py
tests/llm/: test_llm_01.py
tests/pdf/: test_pdf_01.py  test_word_01.py
tests/pushkin/: test_pushkin_01.py
tests/stalin/: test_stalin_01.py
tests/utils/: test_file_utils_01.py  test_md_01.py  test_strings_01.py
(+15 files in other folders)
