[tool.poetry]
name = "aice"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.4"
poethepoet = "0.29.0"
datasets = "^3.0.1"
torch = "2.2.2"

# Feature engineering
langchain = "^0.3.25"
langchain-community = "^0.3.23"
langchain-openai = "^0.3.16"
langchain-ollama = "^0.3.2"

sentence-transformers = "^3.0.0"

jinja2 = "^3.1.4"
tiktoken = "^0.7.0"
fake-useragent = "^1.5.1"


# Inference
fastapi = ">=0.100,<=0.110"
uvicorn = "^0.30.6"
opik = "^0.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.26.0"
pymorphy2 = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tests
[tool.poe.tasks.test]
cmd = "poetry run pytest tests/"
env = { ENV_FILE = ".env.testing" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"